hospital-managemnt-system/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: hospital-system
spec:
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
